--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
     "cors": "^2.8.1",
     "debug": "^2.6.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.8",
     "morgan": "^1.7.0"
   }
