--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.16.0",
     "cors": "^2.8.1",
     "debug": "^2.6.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.8",
