--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cd client && npm i && npm test && cd ../server && npm i && npm test"
+    "test": "cd app && npm i && npm test && cd ../server && npm i && npm test"
   },
   "repository": {
     "type": "git",
